--- a/PuppyRecipes/Info.plist
+++ b/PuppyRecipes/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>NSAppTransportSecurity</key>
 	<dict>
+		<key>NSAllowsArbitraryLoadsInWebContent</key>
+		<true/>
 		<key>NSExceptionDomains</key>
 		<dict>
 			<key>recipepuppy.com</key>
